--- a/index.html
+++ b/index.html
@@ -2,8 +2,40 @@
 <html>
 <head>
     <title>Viswa Sushanth Karuturi</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-family: "Segoe UI", Arial, sans-serif;
+            background-color: #0d0d0d;
+            color: white;
+        }
+
+        h1 {
+            position: absolute;
+            top: 20px;
+            width: 100%;
+            text-align: center;
+            margin: 0;
+            font-size: 34px;
+            letter-spacing: 1px;
+            font-weight: 600;
+        }
+
+        h2 {
+            font-size: 40px;
+            font-weight: 700;
+            opacity: 0.85;
+        }
+    </style>
 </head>
 <body>
-    <h1>Work in Progress</h1>
+    <h1>Viswa Sushanth Karuturi</h1>
+    <h2>Work in Progress</h2>
 </body>
 </html>
